--- a/client/src/App.css
+++ b/client/src/App.css
@@ -92,7 +92,7 @@
 
 .messages {
   margin-bottom: 20px;
-  max-height: 300px;
+  height: 80svh;
   overflow-y: auto;
   border: 1px solid #ddd;
   padding: 10px;
