--- a/client/src/App.css
+++ b/client/src/App.css
@@ -97,6 +97,8 @@
   border: 1px solid #ddd;
   padding: 10px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .message {
