--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-/* Modal styles */
+/* Modal Styles */
 .modal {
   position: fixed;
   top: 0;
@@ -15,7 +15,7 @@
 
 .modal-content {
   background-color: #fff;
-  padding: 1.25rem;
+  padding: 1.5rem;
   border-radius: 0.625rem;
   text-align: center;
   max-width: 90%;
@@ -24,13 +24,13 @@
 }
 
 .modal-content h2 {
-  margin-bottom: 0.625rem;
-  font-size: 1.375rem;
+  margin-bottom: 0.75rem;
+  font-size: 1.5rem;
 }
 
 .modal-content p {
-  margin-bottom: 1.25rem;
-  font-size: 0.875rem;
+  margin-bottom: 1.5rem;
+  font-size: 1rem;
   color: #333;
 }
 
@@ -55,12 +55,65 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  font-family: Roboto, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f4f4f4;
 }
 
 .room-entry {
-  margin-top: 1.25rem;
-  padding: 0 0.625rem;
+  padding: 1rem 2rem 1rem 2rem;
+  background-color: #ffffff;
+  border-radius: 0.625rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: 0 auto;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.username {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.username > h3 {
+  font-size: 1.5rem;
+  color: #333;
+}
+
+.username > img {
+  width: 1.25rem;
+  cursor: pointer;
+}
+
+.action-group {
+  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.prompt-text {
+  margin-bottom: 0.5rem;
+  font-size: 1.125rem;
+  color: #555;
+}
+
+.input-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.input.room-input {
+  padding: 0.875rem;
+  width: 70%;
+  border: 1px solid #ccc;
+  border-radius: 0.375rem;
+  font-size: 1rem;
 }
 
 .room-input {
@@ -96,17 +149,38 @@
 }
 
 .btn {
-  background-color: #25d366;
-  color: white;
-  border: none;
-  padding: 0.75rem 1.5rem;
-  cursor: pointer;
-  border-radius: 0.3125rem;
+  padding: 0.875rem 1.25rem;
   font-size: 1rem;
+  border-radius: 0.375rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.primary-btn {
+  background-color: #25d366;
+  color: #fff;
+  border: none;
+}
+
+.primary-btn:hover {
+  background-color: #1ebc57;
+}
+
+.secondary-btn {
+  background-color: #f5f5f5;
+  color: #333;
+  border: 1px solid #ddd;
+  padding: 0.914rem;
+  font-size: 0.75rem;
+}
+
+.secondary-btn:hover {
+  background-color: #ebebeb;
 }
 
 .btn:hover {
   background-color: #1ebc57;
+  color: #fff;
 }
 
 .chat-room {
@@ -127,8 +201,24 @@
   flex-direction: column-reverse;
 }
 
+.message-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.message-container.incoming {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+}
+
+.message-container.outgoing {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-end;
+}
+
 .message {
-  max-width: 60%;
   padding: 0.75rem 1.125rem;
   margin-bottom: 0.625rem;
   border-radius: 1.25rem;
@@ -138,13 +228,11 @@
 
 .message.incoming {
   background-color: white;
-  align-self: flex-start;
   border-bottom-left-radius: 0;
 }
 
 .message.outgoing {
   background-color: #dcf8c6;
-  align-self: flex-end;
   border-bottom-right-radius: 0;
 }
 
@@ -194,16 +282,16 @@
 /* Responsive Design */
 @media (max-width: 600px) {
   .modal-content {
-    padding: 1rem;
+    padding: 1.25rem;
     border-radius: 0.5rem;
   }
 
   .modal-content h2 {
-    font-size: 1.125rem;
+    font-size: 1.25rem;
   }
 
   .modal-content p {
-    font-size: 0.75rem;
+    font-size: 0.875rem;
   }
 
   .modal-content button {
